# claude-pilot

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
app/: agent.py  config.py  dashboard.py  database.py  main.py  models.py  report_theme.py
app/api/: routes.py
app/reports/: __init__.py  html_builder.py  metrics.py  models.py  routes.py
n8n/: trading-analysis-workflow.json
static/: logo-preview.html
tests/: test_agent.py  test_dashboard.py  test_database.py
